[gd_scene load_steps=33 format=2]

[ext_resource path="res://LevelProps/Bush/Bush.gd" type="Script" id=1]
[ext_resource path="res://LevelProps/Bush/30-min.png" type="Texture" id=2]
[ext_resource path="res://LevelProps/Bush/49-min.png" type="Texture" id=3]
[ext_resource path="res://LevelProps/Bush/46-min.png" type="Texture" id=4]
[ext_resource path="res://LevelProps/Bush/34-min.png" type="Texture" id=5]
[ext_resource path="res://LevelProps/Bush/47-min.png" type="Texture" id=6]
[ext_resource path="res://LevelProps/Bush/31-min.png" type="Texture" id=7]
[ext_resource path="res://LevelProps/Bush/35-min.png" type="Texture" id=8]
[ext_resource path="res://LevelProps/Bush/36-min.png" type="Texture" id=9]
[ext_resource path="res://LevelProps/Bush/38-min.png" type="Texture" id=10]
[ext_resource path="res://LevelProps/Bush/51-min.png" type="Texture" id=11]
[ext_resource path="res://LevelProps/Bush/42-min.png" type="Texture" id=12]
[ext_resource path="res://LevelProps/Bush/45-min.png" type="Texture" id=13]
[ext_resource path="res://LevelProps/Bush/41-min.png" type="Texture" id=14]
[ext_resource path="res://LevelProps/Bush/40-min.png" type="Texture" id=15]
[ext_resource path="res://LevelProps/Bush/43-min.png" type="Texture" id=16]
[ext_resource path="res://LevelProps/Bush/37-min.png" type="Texture" id=17]
[ext_resource path="res://LevelProps/Bush/33-min.png" type="Texture" id=18]
[ext_resource path="res://LevelProps/Bush/39-min.png" type="Texture" id=19]
[ext_resource path="res://LevelProps/Bush/44-min.png" type="Texture" id=20]
[ext_resource path="res://LevelProps/Bush/32-min.png" type="Texture" id=21]
[ext_resource path="res://LevelProps/Bush/48-min.png" type="Texture" id=22]
[ext_resource path="res://LevelProps/Bush/50-min.png" type="Texture" id=23]
[ext_resource path="res://LevelProps/Bush/27-min.png" type="Texture" id=24]
[ext_resource path="res://LevelProps/Bush/29-min.png" type="Texture" id=25]
[ext_resource path="res://LevelProps/Bush/bush_Light.png" type="Texture" id=26]
[ext_resource path="res://LevelProps/Bush/24-min.png" type="Texture" id=27]
[ext_resource path="res://LevelProps/Bush/26-min.png" type="Texture" id=28]
[ext_resource path="res://LevelProps/Bush/28-min.png" type="Texture" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "startingBurn",
"speed": 15.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 10 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 22 ), ExtResource( 3 ), ExtResource( 23 ), ExtResource( 11 ) ],
"loop": true,
"name": "Burning",
"speed": 14.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "notBurning",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "lightUp"
tracks/0/type = "value"
tracks/0/path = NodePath("Lights:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lights:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 440.911, 118.09 )

[node name="Bush" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Burning"
frame = 13
playing = true

[node name="Lights" type="Node2D" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )

[node name="Light2D" type="Light2D" parent="Lights"]
position = Vector2( -41.7954, -7.29762 )
texture = ExtResource( 26 )
texture_scale = 1.5

[node name="Light2D2" type="Light2D" parent="Lights"]
position = Vector2( 58.3809, 16.5855 )
texture = ExtResource( 26 )
texture_scale = 1.5

[node name="Light2D3" type="Light2D" parent="Lights"]
position = Vector2( 60.3712, -84.9177 )
texture = ExtResource( 26 )
texture_scale = 1.5

[node name="Light2D4" type="Light2D" parent="Lights"]
position = Vector2( -84.9177, -17.2489 )
texture = ExtResource( 26 )
texture_scale = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/lightUp = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
